--- a/crates/bergamot-server/webui/index.html
+++ b/crates/bergamot-server/webui/index.html
@@ -123,7 +123,7 @@
 				<div href="#" onclick="Status.statDialogClick()" title="Remaining time (click for more statistics) [Shift+A]"><i class="material-icon navbar-icon" id="StatusTimeIcon">schedule</i> <span id="StatusTime">--h --m</span></div>
 			</div>
 			
-			<div id="RefreshBlockDesktop" class="pull-right phone-hide">
+			<div id="RefreshBlockDesktop" class="phone-hide">
 				<div class="btn-toolbar" id="RefreshBlock">
 					<div class="btn-group">
 						<button class="btn btn-inverse" id="RefreshButton" title="Refresh [Shift+R]"><i class="material-icon" id="RefreshAnimation">refresh</i></button>
@@ -150,13 +150,13 @@
 
 
 			<!-- REFRESH MENU PLACE IN MINI-THEME -->
-			<div id="RefreshBlockPhone" class="pull-right phone-only">
+			<div id="RefreshBlockPhone" class="phone-only">
 			</div>
 
 			<!-- SEARCH -->
-			<div class="btn-toolbar pull-right" id="SearchBlock">
+			<div class="btn-toolbar" id="SearchBlock">
 				<div class="navbar-search" style="display: none;">
-					<div id="SearchBlock_Caret" class="search-caret-block pull-right">
+					<div id="SearchBlock_Caret" class="search-caret-block">
 						<button class="search-caret-button" data-toggle="dropdown" onclick="FilterMenu.redraw()"><span class="caret"></span></button>
 						<ul class="dropdown-menu menu-with-button" id="FilterMenu">
 							<li class="menu-header">Saved filters</li>
@@ -290,8 +290,8 @@
 
 <!-- *** DOWNLOADS: TABLE -->
 
-			<div class="form-inline toolbox-top clearfix" id="DownloadsTableTopBlock">
-				<div class="pull-left toolbox-length" id="DownloadsRecordsPerPageBlock">
+			<div class="form-inline toolbox-top" id="DownloadsTableTopBlock">
+				<div class="toolbox-length" id="DownloadsRecordsPerPageBlock">
 					<select size="1" id="DownloadsRecordsPerPage" onchange="Downloads.recordsPerPageChange()">
 						<option value="5">5</option>
 						<option selected="selected" value="10">10</option>
@@ -303,7 +303,7 @@
 					</select><span class="records-label"> records per page</span>
 				</div>
 
-				<div class="pagination pull-right"><ul id="DownloadsTable_pager"></ul></div>
+				<div class="pagination"><ul id="DownloadsTable_pager"></ul></div>
 			</div>
 
 			<table class="table table-striped table-bordered table-check table-cancheck table-drag datatable" id="DownloadsTable">
@@ -325,7 +325,7 @@
 				<tbody></tbody>
 			</table>
 
-			<div class="toolbox-info clearfix">
+			<div class="toolbox-info">
 				<div id="DownloadsTable_info"></div>
 			</div>
 
@@ -382,8 +382,8 @@
 
 <!-- *** HISTORY: TABLE -->
 
-			<div class="form-inline toolbox-top clearfix" id="HistoryTableTopBlock">
-				<div class="pull-left toolbox-length" id="HistoryRecordsPerPageBlock">
+			<div class="form-inline toolbox-top" id="HistoryTableTopBlock">
+				<div class="toolbox-length" id="HistoryRecordsPerPageBlock">
 					<select size="1" id="HistoryRecordsPerPage" onchange="History.recordsPerPageChange()">
 						<option value="5">5</option>
 						<option selected="selected" value="10">10</option>
@@ -395,7 +395,7 @@
 					</select><span class="records-label"> records per page</span>
 				</div>
 
-				<div class="pagination pull-right"><ul id="HistoryTable_pager"></ul></div>
+				<div class="pagination"><ul id="HistoryTable_pager"></ul></div>
 			</div>
 
 			<table class="table table-striped table-bordered table-check table-cancheck datatable" id="HistoryTable">
@@ -416,7 +416,7 @@
 				<tbody></tbody>
 			</table>
 
-			<div class="toolbox-info clearfix">
+			<div class="toolbox-info">
 				<div id="HistoryTable_info"></div>
 			</div>
 
@@ -457,8 +457,8 @@
 
 <!-- *** MESSAGES: TABLE -->
 
-			<div class="form-inline toolbox-top clearfix" id="MessagesTableTopBlock">
-				<div class="pull-left toolbox-length" id="MessagesRecordsPerPageBlock">
+			<div class="form-inline toolbox-top" id="MessagesTableTopBlock">
+				<div class="toolbox-length" id="MessagesRecordsPerPageBlock">
 					<select size="1" id="MessagesRecordsPerPage" onchange="Messages.recordsPerPageChange()">
 						<option value="5">5</option>
 						<option selected="selected" value="10">10</option>
@@ -471,7 +471,7 @@
 					</select><span class="records-label"> records per page</span>
 				</div>
 
-				<div class="pagination pull-right"><ul id="MessagesTable_pager"></ul></div>
+				<div class="pagination"><ul id="MessagesTable_pager"></ul></div>
 			</div>
 
 			<table class="table table-striped table-bordered datatable" id="MessagesTable">
@@ -483,7 +483,7 @@
 				<tbody></tbody>
 			</table>
 
-			<div class="toolbox-info clearfix">
+			<div class="toolbox-info">
 				<div id="MessagesTable_info"></div>
 			</div>
 
@@ -550,13 +550,13 @@
 						</div>
 
 						<div class="config__main">
-								<div class="config-header clearfix">
-									<div class="pull-left config-title">
+								<div class="config-header">
+									<div class="config-title">
 										<span id="ConfigTitle">INFO</span>
 										<span id="ConfigTitleStatus" style="font-size: initial;"></span>
 									</div>
 									
-									<div class="btn-group pull-right">
+									<div class="btn-group">
 										<a class="btn dropdown-toggle" id="Config_ViewButton" data-toggle="dropdown">View <span class="caret"></span></a>
 										<ul class="dropdown-menu footer-button-menu" id="Config_ViewMenu">
 											<li class="menu-header">View Options</li>
@@ -1207,7 +1207,7 @@
 						<button class="btn btn-default volume-range" id="StatDialog_Volume_DAY" onclick="StatDialog.chooseRange('DAY')" title="Show last 24 hours">24 hours</button>
 						<button class="btn btn-default volume-range" id="StatDialog_Volume_MONTH" onclick="StatDialog.chooseRange('MONTH')" title="Show a month or a whole year">January 2000</button>
 						<button class="btn btn-default volume-range dropdown-toggle" id="StatDialog_Volume_MONTH3" data-toggle="dropdown"><span class="caret"></span></button>
-						<ul class="dropdown-menu menu-check pull-right" id="StatDialog_MonthMenu">
+						<ul class="dropdown-menu menu-check dropdown-menu-end" id="StatDialog_MonthMenu">
 							<li class="menu-header">Months</li>
 							<li class="volume-month-template hide"><a href="#"></a></li>
 							<li class="menu-header" id="StatDialog_MonthMenuYears">Years</li>
@@ -1361,8 +1361,8 @@
 		</div>
 	</div>
 	<div class="modal-footer">
-		<div class="btn-group pull-left">
-			<a data-toggle="modal" href="#ScheduledPauseDialogHelp" class="btn btn-default pull-left">Quick Help</a>
+		<div class="btn-group modal-footer-left">
+			<a data-toggle="modal" href="#ScheduledPauseDialogHelp" class="btn btn-default">Quick Help</a>
 		</div>
 
 		<div class="dialog-transmit hide" style="position:absolute;margin-left:260px;" id="ScheduledPause_Transmit"><img src="img/transmit.gif"></div>
@@ -1590,7 +1590,7 @@
 				</div>
 				<div>
 					<div class="row-fluid">
-						<div class="pull-left btn-toolbar form-inline modal-toolbar">
+						<div class="btn-toolbar form-inline modal-toolbar">
 							<!-- EDIT BUTTONS -->
 							<div class="btn-group phone-hide">
 								<button class="btn btn-default" onclick="DownloadsEditDialog.editActionClick('pause')" title="Pause selected files"><i class="material-icon">pause</i><span class="btn-caption"> Pause</span></button>
@@ -1615,7 +1615,7 @@
 							<div class="btn-group phone-only inline"><button class="btn btn-default" onclick="DownloadsEditDialog.editActionClick('down')" title="Move selected files down"><i class="material-icon">south</i></button></div>
 							<div class="btn-group phone-only inline"><button class="btn btn-default" onclick="DownloadsEditDialog.editActionClick('bottom')" title="Move selected files to the bottom"><i class="material-icon">vertical_align_bottom</i></button></div>
 						</div>
-						<div class="pull-right" style="margin-bottom:10px;"><input id="DownloadsEdit_FileTable_filter" class="search-query" placeholder="Search" type="text"></div>
+						<div style="margin-left:auto; margin-bottom:10px;"><input id="DownloadsEdit_FileTable_filter" class="search-query" placeholder="Search" type="text"></div>
 					</div>
 
 					<div id="DownloadsEdit_FileBlock">
@@ -1645,7 +1645,7 @@
 							<tbody></tbody>
 						</table>
 					</div>
-					<div class="pull-right hide" id="DownloadsEdit_ServStatsTable_pagerBlock"><div class="pagination" id ="DownloadsEdit_ServStatsTable_pager"></div></div>
+					<div class="hide" id="DownloadsEdit_ServStatsTable_pagerBlock"><div class="pagination" id ="DownloadsEdit_ServStatsTable_pager"></div></div>
 				</div>
 			</div>
 
@@ -1654,11 +1654,11 @@
 					<img src="img/transmit.gif"></img>
 				</div>
 				<div>
-					<div class="btn-toolbar form-inline clearfix modal-toolbox">
-						<div class="pull-left btn-group">
+					<div class="btn-toolbar form-inline modal-toolbox">
+						<div class="btn-group">
 							<button class="btn btn-default" onclick="LogTab.export()" title="Save log into file"><i class="material-icon">save</i><span class="btn-caption"> Save To File</span></button>
 						</div>
-						<div id="DownloadsLogRecordsPerPageBlock" class="pull-left toolbox-length">
+						<div id="DownloadsLogRecordsPerPageBlock" class="toolbox-length">
 							<select size="1" id="DownloadsLogRecordsPerPage" onchange="LogTab.recordsPerPageChange('Downloads')">
 								<option value="5">5</option>
 								<option selected="selected" value="10">10</option>
@@ -1675,7 +1675,7 @@
 						<div id="DownloadsEdit_LogTable_filterBlock">
 							<input id="DownloadsEdit_LogTable_filter" class="search-query" placeholder="Search" type="text">
 						</div>
-						<div id ="DownloadsEdit_LogTable_pagerBlock" class="pull-right"><div class="pagination" id ="DownloadsEdit_LogTable_pager"></div></div>
+						<div id ="DownloadsEdit_LogTable_pagerBlock"><div class="pagination" id ="DownloadsEdit_LogTable_pager"></div></div>
 					</div>
 					<div id="DownloadsEdit_LogBlock">
 						<table class="table table-striped table-bordered datatable" id="DownloadsEdit_LogTable" style="margin-bottom:15px;">
@@ -1724,7 +1724,7 @@
 	</div>
 
 	<div class="modal-footer">
-		<div class="btn-group dropup pull-left">
+		<div class="btn-group dropup modal-footer-left">
 			<a class="btn btn-default" id="DownloadsEdit_Actions">Actions <span class="caret"></span></a>
 		</div>
 
@@ -2014,11 +2014,11 @@
 					<img src="img/transmit.gif"></img>
 				</div>
 				<div>
-					<div class="btn-toolbar form-inline clearfix modal-toolbox">
-    					<div class="pull-left btn-group">
+					<div class="btn-toolbar form-inline modal-toolbox">
+    					<div class="btn-group">
 							<button class="btn btn-default" onclick="LogTab.export()" title="Save log into file"><i class="material-icon">save</i><span class="btn-caption"> Save To File</span></button>
 						</div>
-						<div id="HistoryLogRecordsPerPageBlock" class="pull-left toolbox-length">
+						<div id="HistoryLogRecordsPerPageBlock" class="toolbox-length">
 							<select size="1" id="HistoryLogRecordsPerPage" onchange="LogTab.recordsPerPageChange('History')">
 								<option value="5">5</option>
 								<option selected="selected" value="10">10</option>
@@ -2035,7 +2035,7 @@
 						<div id="HistoryEdit_LogTable_filterBlock">
 							<input id="HistoryEdit_LogTable_filter" class="search-query" placeholder="Search" type="text">
 						</div>
-						<div id ="HistoryEdit_LogTable_pagerBlock" class="pull-right"><div class="pagination" id ="HistoryEdit_LogTable_pager"></div></div>
+						<div id ="HistoryEdit_LogTable_pagerBlock"><div class="pagination" id ="HistoryEdit_LogTable_pager"></div></div>
 					</div>
 					<div id="HistoryEdit_LogBlock">
 						<table class="table table-striped table-bordered datatable" id="HistoryEdit_LogTable" style="margin-bottom:15px;">
@@ -2054,7 +2054,7 @@
 							<tbody></tbody>
 						</table>
 					</div>
-					<div class="pull-right hide" id="HistoryEdit_ServStatsTable_pagerBlock"><div class="pagination" id ="HistoryEdit_ServStatsTable_pager"></div></div>
+					<div class="hide" id="HistoryEdit_ServStatsTable_pagerBlock"><div class="pagination" id ="HistoryEdit_ServStatsTable_pager"></div></div>
 				</div>
 			</div>
 
@@ -2066,7 +2066,7 @@
 							<tbody></tbody>
 						</table>
 					</div>
-					<div class="pull-right hide" id="HistoryEdit_TimeStatsTable_pagerBlock"><div class="pagination" id ="HistoryEdit_TimeStatsTable_pager"></div></div>
+					<div class="hide" id="HistoryEdit_TimeStatsTable_pagerBlock"><div class="pagination" id ="HistoryEdit_TimeStatsTable_pager"></div></div>
 				</div>
 			</div>
 
@@ -2115,7 +2115,7 @@
 
 	<div class="modal-footer">
 
-		<div class="btn-group dropup pull-left">
+		<div class="btn-group dropup modal-footer-left">
 			<a class="btn btn-default dropdown-toggle" id="HistoryEdit_Actions" data-toggle="dropdown">Actions <span class="caret"></span></a>
 		</div>
 
@@ -2168,7 +2168,7 @@
 				</div>
 				<div>
 					<div class="row-fluid modal-scrollheader">
-						<div class="pull-left btn-toolbar form-inline modal-toolbar" id="FeedDialog_Toolbar">
+						<div class="btn-toolbar form-inline modal-toolbar" id="FeedDialog_Toolbar">
 
 							<!-- STATUS FILTER BUTTONS -->
 							<div class="btn-group phone-hide">
@@ -2191,7 +2191,7 @@
 							<div class="btn-group phone-only inline"><button class="btn btn-default FeedDialog-names" id="FeedDialog_Filenames2" onclick="FeedDialog.setFilenameMode(true)" title="Show Filenames">Filenames</button></div>
 
 						</div>
-						<div class="pull-right" style="margin-bottom:10px;"><input id="FeedDialog_ItemTable_filter" class="search-query" placeholder="Search" type="text"></div>
+						<div style="margin-left:auto; margin-bottom:10px;"><input id="FeedDialog_ItemTable_filter" class="search-query" placeholder="Search" type="text"></div>
 					</div>
 
 					<div id="FeedDialog_TableBlock">
@@ -2199,7 +2199,7 @@
 							<thead><tr><th><i</th><th>Status</th><th id="FeedDialog_ItemTable_Name">Title</th><th>Category</th><th class="text-right">Age</th><th class="text-right">Size</th></tr></thead>
 							<tbody></tbody>
 						</table>
-						<div class="pull-right" id ="FeedDialog_ItemTable_pagerBlock"><div class="pagination" id ="FeedDialog_ItemTable_pager"></div></div>
+						<div id ="FeedDialog_ItemTable_pagerBlock"><div class="pagination" id ="FeedDialog_ItemTable_pager"></div></div>
 					</div>
 				</div>
 			</div>
@@ -2226,7 +2226,7 @@
 		<div>
 			<div class="modal-tab">
 				<div class="row-fluid modal-scrollheader">
-					<div class="pull-left btn-toolbar form-inline modal-toolbar" id="FeedFilterDialog_Toolbar">
+					<div class="btn-toolbar form-inline modal-toolbar" id="FeedFilterDialog_Toolbar">
 
 						<!-- FILTER INPUT BUTTONS -->
 						<div class="btn-group">
@@ -2284,7 +2284,7 @@
 						<thead><tr><th>Match</th><th>Rule</th><th id="FeedFilterDialog_ItemTable_Name">Title</th><th>Category</th><th class="text-right">Age</th><th class="text-right">Size</th></tr></thead>
 						<tbody></tbody>
 					</table>
-					<div class="pull-right" id ="FeedFilterDialog_ItemTable_pagerBlock"><div class="pagination" id ="FeedFilterDialog_ItemTable_pager"></div></div>
+					<div id ="FeedFilterDialog_ItemTable_pagerBlock"><div class="pagination" id ="FeedFilterDialog_ItemTable_pager"></div></div>
 				</div>
 
 			</div>
@@ -2293,8 +2293,8 @@
 	</div>
 
 	<div class="modal-footer">
-		<div class="btn-group pull-left">
-			<a data-toggle="modal" href="#FeedFilterDialogHelp" class="btn btn-default pull-left">Quick Help</a>
+		<div class="btn-group modal-footer-left">
+			<a data-toggle="modal" href="#FeedFilterDialogHelp" class="btn btn-default">Quick Help</a>
 		</div>
 
 		<div class="dialog-transmit hide" style="position:absolute;right:220px;" id="FeedFilterDialog_Transmit"><img src="img/transmit.gif"></div>
@@ -2518,8 +2518,8 @@
 	</div>
 
 	<div class="modal-footer">
-		<div class="btn-group pull-left">
-			<a data-toggle="modal" href="#" class="btn btn-default pull-left" id="ConfirmDialog_Help">Quick Help</a>
+		<div class="btn-group modal-footer-left">
+			<a data-toggle="modal" href="#" class="btn btn-default" id="ConfirmDialog_Help">Quick Help</a>
 		</div>
 		<a href="#" class="btn btn-default" data-dismiss="modal" id="ConfirmDialog_Close">Cancel</a>
 		<a href="#" class="btn btn-primary" id="ConfirmDialog_OK">Action</a>
@@ -2779,7 +2779,7 @@
 	</div>
 
 	<div class="modal-footer">
-		<a href="#" class="btn btn-danger pull-left" onclick="PurgeHistoryDialog.delete(event)">Delete <span id="PurgeHistoryDialog_count2">250</span> records</a>
+		<a href="#" class="btn btn-danger modal-footer-left" onclick="PurgeHistoryDialog.delete(event)">Delete <span id="PurgeHistoryDialog_count2">250</span> records</a>
 		<a href="#" class="btn btn-primary" data-dismiss="modal">Cancel</a>
 	</div>
 </div>
@@ -2853,8 +2853,8 @@
 	</div>
 
 	<div class="modal-footer">
-		<div class="btn-group pull-left">
-			<a data-toggle="modal" href="#AddDialogHelp" class="btn btn-default pull-left">Quick Help</a>
+		<div class="btn-group modal-footer-left">
+			<a data-toggle="modal" href="#AddDialogHelp" class="btn btn-default">Quick Help</a>
 		</div>
 
 		<div class="dialog-transmit hide" style="position:absolute;margin-left:260px;" id="AddDialog_Transmit"><img src="img/transmit.gif"></div>
@@ -3057,7 +3057,7 @@
 	</div>
 
 	<div class="modal-footer">
-		<a href="#" class="btn btn-danger pull-left" onclick="Config.discardChanges()">Discard changes</a>
+		<a href="#" class="btn btn-danger modal-footer-left" onclick="Config.discardChanges()">Discard changes</a>
 		<a href="#" class="btn btn-default" data-dismiss="modal">Cancel</a>
 		<a href="#" class="btn btn-primary" onclick="Config.saveChanges()">Save changes</a>
 	</div>
@@ -3129,8 +3129,8 @@
 
 	</div>
 	<div class="modal-footer">
-		<div class="btn-group pull-left">
-			<a data-toggle="modal" href="#UpdateDialogHelp" class="btn btn-default pull-left">Quick Help</a>
+		<div class="btn-group modal-footer-left">
+			<a data-toggle="modal" href="#UpdateDialogHelp" class="btn btn-default">Quick Help</a>
 		</div>
 		<a href="#" class="btn btn-default" id="UpdateDialog_Close" data-dismiss="modal">Close</a>
 	</div>
@@ -3177,7 +3177,7 @@
 		</pre>
 	</div>
 	<div class="modal-footer">
-		<div class="pull-left" id="ExecScriptDialog_Status">You may close this dialog any time, the script remains running in background.</div>
+		<div id="ExecScriptDialog_Status" class="modal-footer-left">You may close this dialog any time, the script remains running in background.</div>
 		<a href="#" class="btn btn-primary" data-dismiss="modal">Close</a>
 	</div>
 </div>
